express/features/table-of-contents-seo/table-of-contents-seo.css
.table-of-contents-seo {
  position: fixed;
  z-index: 25;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  background-color: #f4f4f4;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 200px;
  white-space: nowrap;
  text-align: left; 
  border-radius: 0 12px 12px 0;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.05), 0 -6px 12px rgba(0, 0, 0, 0.05), 
            6px 0 12px rgba(0, 0, 0, 0.05), -6px 0 12px rgba(0, 0, 0, 0.05); 
}

.toc-title {
  font-weight: bold;
  margin-bottom: 10px; 
}

.toc-entry {
  margin-bottom: 15px;
  position: relative;
  display: flex;
  align-items: flex-start;
  padding-left: 14px;
  text-align: left;
  white-space: normal;
  overflow-wrap: break-word;
}

.toc-entry span.toc-bold {
  font-weight: var(--font-weight-bold);
}

.toc .toc-entry a {
  color: var(--color-info-accent);
  text-decoration: none;
}

.toc.mobile-toc .toc-entry .toc-normal {
  color: var(--color-info-accent);
}

.toc-entry a.toc-normal {
  font-weight: normal;
}

.toc-entry .vertical-line {
  width: 4px;
  height: 20px;
  background-color: transparent;
  position: absolute;
  left: 0;
  top: 0;
}

.toc-entry.active .vertical-line {
  background-color: var(--color-info-accent);
}

.toc-entry .toc-number {
  margin-right: 5px;
  flex-shrink: 0;
  align-self: flex-start;
  color: var(--color-info-accent);
  flex-shrink: 0;
}

.toc-title,
.toc-entry {
  display: flex;
  align-items: center;
  padding-left: 20px; 
  padding-right: 20px;
}

.toc-title > div,
.toc-entry > .toc-number {
  margin-right: 8px;
}

.toc-title > div {
  display: flex;
  align-items: center;
  margin-left: -6px;
}

.number-circle {
  background-color: #E0E2FD;
  color: black;
  font-weight: bold;
  font-size: 26px;
  width: 50px;
  height: 50px;
  line-height: 50px;
  text-align: center;
  border-radius: 50%;
  display: inline-block;
  margin-right: 10px;
  position: relative;
  vertical-align: bottom;
}

.number-circle::before {
  content: attr(data-number);
  position: absolute;
  top: 46%;
  left: 50%;
  transform: translate(-50%, -50%);
}

main .section.section-wrapper .mobile-toc {
  border: 1px solid #D0D0D0;
  background-color: #f8f8f8;
  margin: 0;
  max-width: none;
}

.mobile-toc .toc-title {
  height: 36px;
  margin-bottom: 0;
}

.mobile-toc .toc-title-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  padding: 10px;
}

.mobile-toc .toc-content {
  display: none;
}

.mobile-toc .toc-content.open {
  margin-top: 8px;
  display: block;
  padding-left: 10px;
  padding-bottom: 10px;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.toc-chevron {
  padding-right: 10px;
  padding-top: 8px;
}

.toc-chevron::before {
  border-style: solid;
  border-width: 0.15em 0.15em 0 0;
  content: '';
  display: inline-block;
  height: 0.45em;
  left: 0.15em;
  position: relative;
  top: 0.15em;
  transform: rotate(-45deg);
  vertical-align: top;
  width: 0.45em;
  transition: transform 0.05s ease;
}

.toc-chevron.up:before {
  transform: rotate(135deg);
}

@media (min-width: 600px) {
  .table-of-contents-seo {
    display: block;
  }
}

